--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <div id="target">表示・非表示される要素</div>
     <button id="toggle">切り替え</button>
 </body>
-<form id="form" method="post" action="">
+<form id="form" method="post" action>
     <div>
+        <label for="message">最大50文字</label>
         <textarea id="id名" ></textarea>
+        <span class="counter">残り: 50</span>
     </div>
 </form>
 </html>
